# pytho_duckdb_csv_parquet

./: .gitignore  README.md  pyproject.toml
